--- a/score.html
+++ b/score.html
@@ -30,9 +30,9 @@
                     <div class="col-md-12">
                         <form id="cover">
                             <p class="title px-5">Score Ranks</p>
-                            <div class="form-group text-center" id="scorelist" style="display: none;">
-                                hah
-                            </div>
+                            <ol class="form-group text-center" id="scorelist" style="display: none;">
+                                
+                            </ol>
                         </form>
                     </div>
                 </div>
