--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                             <div id="finalPage" class="pb-3">
                             </div>
                             <div class="form-group" id="registered">
-                                <input class="form-control" id="name" placeholder="Enter your name"/>
+                                <input class="form-control" id="initial" placeholder="Enter your name"/>
                             </div>
                             <button type="button" class="choice btn btn-outline-warning btn-sm" id="submit">Submit</button>
                         </form>
